--- a/components/MarketTrends.module.css
+++ b/components/MarketTrends.module.css
@@ -93,6 +93,7 @@
 }
 
 .trendCardThumbnail {
+  position: relative;
   flex-shrink: 0;
   width: 50px;
   height: 70px;
@@ -102,6 +103,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+/* Show quick add button on trend item hover */
+.trendItem:hover .trendCardThumbnail :global(.quickAddBtn) {
+  opacity: 1 !important;
+  transform: scale(1) !important;
 }
 
 .trendCardInfo {
