Made new light and dark modes

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -29,7 +29,7 @@
 }
 
 .contentSection {
-  background: var(--color-bg-primary);
+  background: transparent;
   padding-top: 100px;
   position: relative;
   z-index: 1;
